# openclaw-orchestrator

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/: CODEOWNERS  PR_DESCRIPTION.md  pull_request_template.md
docs/: architecture.md  audit-findings.md  execution-plan-20260312.md  frontend-qa-report.md  openclaw-orchestrator-full-architecture.md  (+7 more)
scripts/: dev.sh  (+6 more)
server/: README.md  pyproject.toml
server/openclaw_orchestrator/: __init__.py  __main__.py  app.py  cli.py  config.py
server/openclaw_orchestrator/autonomous/: __init__.py  agent.py  demo.py  progress.py  prompts.py  security.py
server/openclaw_orchestrator/autonomous/prompts/: app_spec.txt  coding_prompt.md  initializer_prompt.md
server/openclaw_orchestrator/database/: __init__.py  db.py  init_db.py
server/openclaw_orchestrator/middleware/: auth.py
server/openclaw_orchestrator/routes/: agent_routes.py  approval_routes.py  chat_routes.py  collaboration_routes.py  knowledge_routes.py  meeting_routes.py  notification_routes.py  runtime_routes.py  settings_routes.py  task_routes.py  team_routes.py  workflow_routes.py
server/openclaw_orchestrator/services/: agent_service.py  audit_log_service.py  chat_service.py  collaboration_service.py  file_manager.py  gateway_connector.py  knowledge_service.py  lead_governance_service.py  live_feed_service.py  meeting_service.py  notification_service.py  openclaw_bridge.py  openclaw_catalog_service.py  provider_keys.py  runtime_service.py  schedule_executor.py  session_watcher.py  task_service.py  team_context_service.py  team_dispatch_service.py  team_service.py  team_usage_service.py  time_utils.py  workflow_engine.py  workflow_scheduler.py
server/openclaw_orchestrator/utils/: __init__.py  markdown_parser.py  message_content.py  path_validator.py  time.py
server/openclaw_orchestrator/websocket/: __init__.py  ws_handler.py
server/tests/: __init__.py  conftest.py  test_agent_routes.py  test_app_static.py  test_audit_log_service.py  test_chat_routes.py  test_chat_service.py  test_gateway_connector.py  test_lead_governance_service.py  test_live_feed_persistence.py  test_live_feed_service.py  test_meeting_service.py  test_monitor_routes.py  test_openclaw_bridge.py  test_runtime_routes.py  test_runtime_service.py  test_task_service.py  test_team_context_service.py  test_team_dispatch_service.py  test_team_routes.py  test_team_service.py  test_time_utils.py  test_usage_service.py  test_workflow_engine.py  test_workflow_routes.py  test_workflow_scheduler.py
server/tests/api/: test_health.py
server/tests/unit/: test_workflow_engine.py
(+12 files in other folders)
