[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw-orchestrator"
version = "0.1.0"
description = "Multi-Agent Visual Orchestration Plugin for OpenClaw"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "aiosqlite>=0.20.0",
    "python-frontmatter>=1.1.0",
    "watchfiles>=0.24.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[project.scripts]
openclaw-orchestrator = "openclaw_orchestrator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["openclaw_orchestrator"]

[tool.hatch.build.targets.wheel.shared-data]
"static" = "openclaw_orchestrator/static"
